--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>vai ser uma imagem aqui</h1>
-<ul>
-    <li>brinquedos</li>
-    <li>crianças</li>
-</ul>
+    <header>
+        <h1>vai ser uma imagem aqui</h1>
+        <ul>
+            <li>brinquedos</li>
+            <li>crianças</li>
+        </ul>
+    </header>
+
 </body>
 </html>
